# fast-scan

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: windows.yml
src/: cli.rs  error.rs  interface.rs  lib.rs  main.rs  receiver.rs  sender.rs  worker.rs
src/scan/: mod.rs  tcp_syn.rs
