[package]
name = "fast-scan"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
pnet = "0.35.0"
rand = "0.9.2"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
ipnet = "2.11.0"
log = "0.4.28"
flexi_logger = "0.31.7"
rayon = "1.11.0"
scopeguard = "1.2.0"
netdev = { version = "0.39.0", features = ["gateway"] }
flume = { version = "0.11.1", features = ["async"] }
num-integer = "0.1.46"
indicatif = "0.18.3"
clap = { version = "4.5.53", features = ["derive"] }
pcap = { version = "2.4.0", features = ["capture-stream"] }
getifs = "0.4"
atomic_enum = "0.3.0"
